tests/rosetta/out/Zig/24-game-solve.error
zig build: exit status 1
/tmp/24-game-solve.zig:137:21: error: local variable is never mutated
/tmp/24-game-solve.zig:137:21: note: consider using 'const'
